feat : bulid.gradle 옵션추가
-Xlint:unchecked 옵션 추가 -> build시 알려주는 warning 자세하게 알려주는 코드
                             필요시 주석 변경하면서 사용하면 될듯.

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 }
+													//-Xlint:unchecked 옵션
+//tasks.withType(JavaCompile) {						//Gradle 빌드시 나오는 오류 자세하게 나오게함
+//	options.compilerArgs << "-Xlint:unchecked"
+//}
 
 tasks.named('test') {
 	useJUnitPlatform()
