--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-application.security.properties
+application-security.properties
 
 .idea
 *.iws
